# Assignment3

Boost_Echo_Client/: CMakeLists.txt  makefile
Boost_Echo_Client/include/: Task.h  Task1.h  connectionHandler.h  encoderDecoder.h
Boost_Echo_Client/src/: BGRSclient.cpp  Task.cpp  Task1.cpp  connectionHandler.cpp  echoClient.cpp
spl-net/: BGRSclient  Courses  Courses.txt
spl-net/src/main/java/bgu/spl/net/impl/: Database.java
spl-net/src/main/java/bgu/spl/net/impl/BGRSServer/: ReactorMain.java  TPCMain.java
spl-net/src/main/java/bgu/spl/net/impl/echo/: EncoderDecoder.java  MessageProtocol.java
spl-net/src/main/java/bgu/spl/net/passiveObjects/: Course.java  Error.java  ServerMessage.java  Student.java
spl-net/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  TPC.java
